--- a/package.json
+++ b/package.json
@@ -1,6 +1,27 @@
 {
+  "name": "testMongoose",
+  "version": "1.0.0",
+  "description": "",
+  "main": "mongoose.js",
   "dependencies": {
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
     "express": "^4.13.3",
+    "mongoose": "^5.1.5",
     "socket.io": "^1.3.7"
-  }
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
